[tool.poetry]
name = "concurrent-download-aerones-challenge"
version = "0.1.0"
description = ""
authors = ["Arseny Poga"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
aiohttp = "^3.10.10"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
