[tool.poetry]
name = "concurrent-download-aerones-challenge"
version = "0.1.0"
description = ""
authors = ["Arseny Poga"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
